--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
   <head>
+    <title>GCN25 50 States 50 Stories - Gradient Background Demo</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
   </head>
   <body>
-    <div id="gradient" />
- </body>
+    <div id="gradient"></div>
+  </body>
 </html>
-
-   
