--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>GCN25 50 States 50 Stories - Gradient Background Demo</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
   </head>
   <body>
     <div id="gradient"></div>
